overflow on mobile issue

--- a/src/styles/blocks/growth-block.scss
+++ b/src/styles/blocks/growth-block.scss
@@ -5,7 +5,6 @@
   }
   .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     grid-gap: 24px;
     .item {
       position: relative;
@@ -41,6 +40,7 @@
     }
   }
   @media screen and (min-width: 900px) {
+    padding: 100px 0;
     .title {
       font-size: 40px;
       font-weight: 700;
@@ -50,6 +50,9 @@
       max-width: 50%;
       margin-bottom: 40px;
     }
-    padding: 100px 0;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
